  transaction/tied-status, policy-marker, and activity-status

- [backwards-incompatible] remove transaction/transaction-date/@type

- [backwards-incompatible] make @ref and @type mandatory for
  related-activity

- add optional iati-activity/@version attribute

- add new transaction/disbursement-channel element

- add new document-link element and subelements

- change structure of budget-planned/period-start and
  budget-planned/period-end so that content doesn't have to be an ISO
  date (and add optional @iso-date attribute)


** Organizations

- [backwards-incompatible] rename iati-organization to
  iati-organisation

- [backwards-incompatible] rename organization-website to
  organisation-website

- add optional iati-organisation/@version attribute

- add new document-link element and subelements


* 2010-07-07 Changes (version 1.0)

** Activities

- add xsd:any to most text content, to allow mixed-content
  extensibility (e.g. in text, description, etc.)

- add xsd:anyAttribute wherever possible

- change @ref to @code anywhere the attribute represents an enumerated
  list rather than the identifier of a business object:
  collaboration-type, (default-)flow-type, default-aid-type,
  transaction/aid-type, (default-)finance-type, sector,
  default-tied-status, tied-status, policy-marker,
  transaction/transaction-type, activity-status, target-location,
  transaction/status

- modify the currencyType complex type so that financial values must
  be integers: affects total-cost, budget-planned/value,
  transaction/value

- make total-cost/value/@value-date, budget-planned/value/@value-date,
  and transaction/value/@value-date required 

- rename finance-type to default-finance-type and add
  transaction/finance-type

- rename flow-type to default-flow-type and add transaction/flow-type

- add transaction/transaction-date/@iso-date (required), and use the
  content to hold an optional text description

- make transaction-date/@type optional
