@@ -1,0 +1,119 @@
+<?xml version="1.0" encoding="utf-8"?>
+
+<xsd:schema xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+            xmlns:xml="http://www.w3.org/XML/1998/namespace"
+            targetNamespace="http://iatiregistry.org/ns/record#">
+
+  <xsd:annotation>
+    <xsd:documentation xml:lang="en">
+      International Aid Transparency Initiative: Registry Record Extension Schema
+
+      Release 1.01, 2010-11-08
+
+      This W3C XML schema is an extension to the IATI standards to add
+      information specific to the IATI registry. Like all IATI
+      extensions, this schema is in a separate namespace to
+      distinguish it from IATI standards-based markup.  
+
+      The root ir:registry-record element (assuming "ir" is the prefix
+      bound to the "http://iatiregistry.org/ns/record#" namespace) may
+      be inserted anywhere in an IATI document, but will normally
+      appear as a child of iati-activities, iati-activity, or
+      iati-organization.
+    </xsd:documentation>
+  </xsd:annotation>
+
+  <xsd:element name="registry-record">
+    <xsd:annotation>
+      <xsd:documentation xml:lang="en">
+        Root of an IATI registry record.  Note that this element and
+        its children not in the default namespace, to distinguish them
+        from the core IATI standard markup.
+      </xsd:documentation>
+    </xsd:annotation>
+    <xsd:complexType>
+      <xsd:attribute name="file-id" type="xsd:string" use="required">
+        <xsd:annotation>
+          <xsd:documentation xml:lang="en">
+            A unique identifier for this file of IATI information.
+            Note that this identifier applies to the file, not to the
+            individual activities or organizations described in it.
+          </xsd:documentation>
+        </xsd:annotation>
+      </xsd:attribute>
+      <xsd:attribute name="source-url" type="xsd:anyURI" use="required">
+        <xsd:annotation>
+          <xsd:documentation xml:lang="en">
+            The source URL for this file: the most up-to-date version
+            of the file will always be available for download at that
+            location.
+          </xsd:documentation>
+        </xsd:annotation>
+      </xsd:attribute>
+      <xsd:attribute name="publisher-id" type="xsd:string" use="required">
+        <xsd:annotation>
+          <xsd:documentation xml:lang="en">
+            The IATI identifier for the publishing organization
+            (required, since any organization using the IATI registry
+            will have an IATI identifier).  This information is
+            identical to iati-activity/reporting-org/@ref.
+          </xsd:documentation>
+        </xsd:annotation>
+      </xsd:attribute>
+      <xsd:attribute name="publisher-role" type="xsd:string" use="required">
+        <xsd:annotation>
+          <xsd:documentation xml:lang="en">
+            The role of the publisher in the activity (if any).  This
+            information is identical to the value of
+            iati-activity/participating-org/@role for the reporting
+            organization.
+          </xsd:documentation>
+        </xsd:annotation>
+      </xsd:attribute>
+      <xsd:attribute name="contact-email" type="xsd:string" use="optional">
+        <xsd:annotation>
+          <xsd:documentation xml:lang="en">
+            An email address that the registry can use for queries
+            about the information.  This information is identical to
+            the value of iati-activity/contact-info/email
+          </xsd:documentation>
+        </xsd:annotation>
+      </xsd:attribute>
+      <xsd:attribute name="donor-id" type="xsd:string" use="required">
+        <xsd:annotation>
+          <xsd:documentation xml:lang="en">
+            The identifier for the donor whose information is reported
+            in this file.  If information for multiple donors is
+            included (as is often the case with non-governmental aid
+            projects), then this should contain the identifier for the
+            largest known donor.  This information is identical to the
+            value of participating-org/@ref with @role="donor"
+          </xsd:documentation>
+        </xsd:annotation>
+      </xsd:attribute>
+      <xsd:attribute name="donor-type" type="xsd:string" use="required">
+        <xsd:annotation>
+          <xsd:documentation xml:lang="en">
+            The type code for the donor whose information is reported
+            in this file, such as "NGO".  If information for multiple
+            donors is included (as is often the case with
+            non-governmental aid projects), then this should contain
+            the type code for the largest known donor.
+          </xsd:documentation>
+        </xsd:annotation>
+      </xsd:attribute>
+      <xsd:attribute name="donor-type" type="xsd:string" use="required">
+        <xsd:annotation>
+          <xsd:documentation xml:lang="en">
+            The type code for the donor whose information is reported
+            in this file, such as "NGO".  If information for multiple
+            donors is included (as is often the case with
+            non-governmental aid projects), then this should contain
+            the type code for the largest known donor.
+          </xsd:documentation>
+        </xsd:annotation>
+      </xsd:attribute>
+    </xsd:complexType>
+  </xsd:element>
+
+</xsd:schema>
