@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 
 <iati-activities>
-  <!-- added @version attribute -->
-  <iati-activity version="1.01">
+  <iati-activity>
     <iati-identifier>12345</iati-identifier>
     <description>xxx</description>
+    <target-location code="AF">Afghanistan</target-location>
   </iati-activity>
 </iati-activities>
