@@ -4,6 +4,7 @@
   <iati-activity>
     <iati-identifier>12345</iati-identifier>
     <description>xxx</description>
+    <!-- new element -->
     <document-link url="http://www.example.org/" format="text/html" language="en">
       <category code="XXX">XXX category</category>
       <category code="YYY">YYY category</category>
