@@ -1,0 +1,16 @@
+<?xml version="1.0"?>
+
+<iati-activities>
+  <iati-activity>
+    <iati-identifier>12345</iati-identifier>
+    <description>xxx</description>
+    <location percentage="100">
+      <location-type code="city"/>
+      <name xml:lang="en">Kandahar</name>
+      <description>West end of Kandahar-Kabul highway</description>
+      <administrative country="AF" adm1="KAN">Kandahar Province, Afghanistan</administrative>
+      <coordinates latitude="31.616944" longitude="65.716944" precision="city"/>
+      <gazetteer-entry gazetteer-ref="[ref]">[identifier in gazetteer]</gazetteer-entry>
+    </location>
+  </iati-activity>
+</iati-activities>
